--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -40,3 +40,10 @@ models:
     # Applies to all files under models/example/
     example:
       +materialized: table
+
+models:
+  +location: EU
+seeds:
+  +location: EU
+snapshots:
+  +location: EU
