--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -37,13 +37,14 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 models:
   my_new_project:
-    # Applies to all files under models/example/
     example:
       +materialized: table
-
-models:
+    mart:
+      +materialized: table
   +location: EU
+
 seeds:
   +location: EU
+
 snapshots:
   +location: EU
