--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -20,11 +20,15 @@ models:
   my_new_project:
     example:
       +materialized: table
+    staging:
+      +materialized: view
+    intermediate:
+      +materialized: view
     mart:
       +materialized: table
       finance:
         +schema: finance
-  +location: EU
+  +location: EU   # dikkat: bu satır proje isminin altında
 
 seeds:
   +location: EU
